--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint -c ./.eslintrc.json src/**/*.{ts,tsx}",
-    "fix": "eslint --fix -c ./.eslintrc.json src/**/*.{ts,tsx}"
+    "fix": "eslint --fix -c ./.eslintrc.json src/**/*.{ts,tsx}",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -52,6 +53,7 @@
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.0"
   }
 }
